--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="cotainer">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center mb-3">
-                    <img id="svglogin" src="/img/logind.svg" class="img-fluid">
+                    <img id="svglogin" src="img/logind.svg" class="img-fluid">
                 </div>
                 <div class="col-md-6">
                     <div class="text-center">
